# OS

./: CMakeLists.txt  README.md
KP_1/: main.cpp
KP_1/doc/: КП.doc
KP_1/include/: BuddyAllocator.h  N2Allocator.h
KP_1/src/: BuddyAllocator.cpp  N2Allocator.cpp
kp1/: CMakeLists.txt
kp1/include/: block_allocator.h  buddy_allocator.h
kp1/src/: block_test.cpp  buddy_test.cpp
lab1/doc/: ЛР1.docx
lab2/: 1.txt  CMakeLists.txt  main.cpp
lab2/doc/: ЛР2.doc
lab2/include/: CMakeLists.txt  errorlib.cpp  errorlib.h
lab2/src/: child1.cpp  child2.cpp  parent.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/doc/: ЛР3.docx
lab3/include/: lab3.h  utils.h
lab3/src/: lab3.cpp
lab4/: CMakeLists.txt
lab4/doc/: ЛР4.docx
lab4/include/: parent.h
lab4/src/: child2.cpp  errorlib.cpp  parent.cpp
lab5/: CMakeLists.txt  main_dynamic.cpp  main_static.cpp
lab5/doc/: ЛР5.doc
lab5/include/: lib.h
lab5/src/: first_lib.cpp  second_lib.cpp
lab6/: CMakeLists.txt  main.cpp
lab6/doc/: ЛР6-8.doc
lab6/include/: server.h  struct_server.h
lab6/src/: node.cpp  node55.cpp  server.cpp
tests/: 222.txt  CMakeLists.txt  lab3_test.cpp  test.sh  test_lab2.cpp  test_lab4.cpp  test_lab5.cpp
